--- a/source/styles/modules/header.less
+++ b/source/styles/modules/header.less
@@ -67,7 +67,7 @@
             width: 574px;
             border: 1px solid @color-gallery;
             height: 51px;
-            padding: 6px 12px;
+            padding: 0 12px;
 
             &::placeholder {
               .text-dusty-gray;
@@ -83,7 +83,7 @@
             .text-center;
 
             padding: 0 20px;
-            line-height: 45px;
+            line-height: 48px;
             border: 2px solid @color-cardinal;
             border-radius: 0;
 
@@ -100,6 +100,8 @@
 
           float: right;
           width: 172px;
+          padding-top: 4px;
+          margin-top: -1px;
           
           i {
             font-size: 20px;
