--- a/source/styles/style.less
+++ b/source/styles/style.less
@@ -18,6 +18,7 @@
 //Third-party libraries
 @import 'overrides/bootstrap.less';
 @import 'overrides/font-awesome.less';
+@import 'overrides/slick-carousel.less';
 
 //Component
 
