--- a/source/styles/modules/header.less
+++ b/source/styles/modules/header.less
@@ -16,8 +16,19 @@
         padding-left: 130px;
         display: inline-block;
         width: 50%;
-        clip-path: polygon(-100px 0, 95% 0, 100% 100%, 0 100%);
         line-height: 42px;
+        position: relative;
+
+        &::before {
+          content: ' ';
+          position: absolute;
+          left: 100%;
+          width: 41.6px;
+          height: 41.6px;
+          border: 20.8px solid @color-cardinal;
+          border-top-color: transparent;
+          border-right-color: transparent;
+        }
       }
 
       &__button {
@@ -144,10 +155,60 @@
           width: 273px;
           padding-left: 24px !important;
           padding-right: 0 !important;
+          position: relative;
+          display: inline-block;
 
           i {
             padding-left: 61px;
           }
+          
+          .sub-list {
+            display: none;
+            position: absolute;
+            left: 0;
+            min-width: 273px;
+            z-index: 1;
+            box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.19);
+
+            .sub-item {
+              .text-scorpion;
+
+              padding: 0 16px;
+              text-decoration: none;
+              display: block;
+              width: 260px;
+
+              &:last-child {
+                border-bottom: none;
+              }
+
+              &::after {
+                content: '';
+                display: block;
+                width: 225px;
+                height: 1px;
+                border-bottom: 1px solid @color-gallery;
+                margin: 0;
+              }
+
+              &:hover {
+                .background-white;
+              }
+
+              > i {
+                float: right;
+                margin: 15px 0;
+              }
+            }
+          }
+
+          &:hover .sub-list {
+            display: block;
+          }
+        }
+
+        &:hover {
+          cursor: pointer;
         }
 
         &__item_2 {
