Update UI and naming convention in header

--- a/source/styles/settings/typography.less
+++ b/source/styles/settings/typography.less
@@ -35,6 +35,10 @@
   text-decoration: line-through !important;
 }
 
+.font-awesome {
+  font-family: 'FontAwesome', sans-serif;
+}
+
 .font-roboto {
   font-family: 'Roboto Regular', serif;
   font-weight: normal;
