--- a/source/styles/modules/header.less
+++ b/source/styles/modules/header.less
@@ -5,7 +5,7 @@
 
 .layout-base-1 {
   #header {
-    &__section_1 {
+    &__header_top {
       .background-wild-sand;
 
       &__address {
@@ -13,19 +13,28 @@
         .text-white;
         .text-medium;
 
-        padding-left: 130px;
         display: inline-block;
         width: 50%;
         line-height: 42px;
         position: relative;
 
         &::before {
-          content: ' ';
+          content: '';
+          .background-cardinal;
+
+          position: absolute;
+          left: -1000px;
+          width: 1000px;
+          height: 100%;
+        }
+
+        &::after {
+          content: '';
           position: absolute;
           left: 100%;
           width: 41.6px;
           height: 41.6px;
-          border: 20.8px solid @color-cardinal;
+          border: 21px solid @color-cardinal;
           border-top-color: transparent;
           border-right-color: transparent;
         }
@@ -33,7 +42,6 @@
 
       &__button {
         float: right;
-        padding-right: 130px;
         line-height: 42px;
 
         &__login {
@@ -42,11 +50,15 @@
           > i {
             padding-right: 13px;
           }
+
+          &:hover {
+            text-decoration: none;
+          }
         }
       }
     }
 
-    &__section_2 {
+    &__header_bottom {
       background-color: white;
       min-height: 67px;
       padding: 21px 0 32px;
@@ -77,8 +89,9 @@
 
           &::placeholder {
             .text-dusty-gray;
-
-            padding-left: 20px;
+            .font-awesome;
+            
+            padding-left: 2px;
           }
         }
 
@@ -128,7 +141,7 @@
       }
     }
 
-    &__section_3 {
+    &__navigation_bar {
       .background-cardinal;
       
       &__list {
@@ -167,19 +180,23 @@
             position: absolute;
             left: 0;
             min-width: 273px;
-            z-index: 1;
+            z-index: 9998;
             box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.19);
 
             .sub-item {
               .text-scorpion;
+              .text-medium;
 
               padding: 0 16px;
               text-decoration: none;
               display: block;
               width: 260px;
+              z-index: 9999;
 
               &:last-child {
-                border-bottom: none;
+                &::after {
+                  border-bottom: none;
+                }
               }
 
               &::after {
