--- a/source/styles/modules/footer.less
+++ b/source/styles/modules/footer.less
@@ -33,6 +33,8 @@
         }
 
         .title {
+          .font-roboto-bold;
+
           font-size: 16px;
           padding-top: 87px;
         }
@@ -80,6 +82,9 @@
             width: 100%;
 
             .text-hint {
+              .text-dusty-gray;
+              .font-roboto;
+
               position: absolute;
               top: 18px;
               left: 23px;
