Update styles header

--- a/source/styles/modules/header.less
+++ b/source/styles/modules/header.less
@@ -165,7 +165,7 @@
         &__item_1 {
           .background-claret;
 
-          width: 273px;
+          width: 274px;
           padding-left: 24px !important;
           padding-right: 0 !important;
           position: relative;
@@ -176,10 +176,12 @@
           }
           
           .sub-list {
+            .background-white;
+
             display: none;
             position: absolute;
             left: 0;
-            min-width: 273px;
+            min-width: 274px;
             z-index: 9998;
             box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.19);
 
@@ -187,7 +189,7 @@
               .text-scorpion;
               .text-medium;
 
-              padding: 0 16px;
+              padding: 0 24px;
               text-decoration: none;
               display: block;
               width: 260px;
@@ -214,7 +216,7 @@
 
               > i {
                 float: right;
-                margin: 15px 0;
+                margin: 15px -8px;
               }
             }
           }
