--- a/source/styles/settings/colors.less
+++ b/source/styles/settings/colors.less
@@ -8,6 +8,7 @@
 @color-mercury: #e9e9e9;
 @color-alto: #dddddd;
 @color-dust-gray: #949494;
+@color-white: #fff;
 
 .text-white {
   color: #fff !important;
