--- a/source/styles/settings/colors.less
+++ b/source/styles/settings/colors.less
@@ -8,6 +8,8 @@
 @color-mercury: #e9e9e9;
 @color-alto: #dddddd;
 @color-dust-gray: #949494;
+@color-scorpion: #595959;
+@color-blackcurrant: #372d40;
 
 .text-white {
   color: #fff !important;
@@ -31,6 +33,10 @@
 
 .text-cardinal {
   color: #d0203f !important;
+}
+
+.text-blackcurrant {
+  color: #372d40 !important;
 }
 
 .background-claret {
@@ -59,4 +65,8 @@
 
 .background-white {
   background-color: #fff;
+}
+
+.background-scorpion {
+  background-color: #595959;
 }
