--- a/source/styles/pages/forgot-password-1.less
+++ b/source/styles/pages/forgot-password-1.less
@@ -22,10 +22,14 @@
         padding-top: 23px;
 
         .title {
+          .font-roboto-medium;
+
           font-size: 32px;
         }
 
         &__text {
+          .text-dusty-gray;
+
           padding-top: 11px;
   
           &__link {
@@ -49,7 +53,7 @@
           }
 
           > .email-label {
-            .text-medium;
+            .font-roboto-medium;
 
             margin: 0;
             font-size: 16px;
