--- a/source/styles/pages/login.less
+++ b/source/styles/pages/login.less
@@ -41,6 +41,8 @@
       }
 
       &__text {
+        .text-dusty-gray;
+        
         padding-top: 11px;
 
         &__link {
@@ -54,7 +56,7 @@
     &__column_2 {
       &__form {
         &__actions {
-          .text-scorpion;
+          .text-river-bed;
 
           display: block;
           position: relative;
@@ -68,7 +70,7 @@
           cursor: pointer;
 
           &__link {
-            .text-scorpion;
+            .text-river-bed;
 
             float: right;
           }
