Use font awesome icon

--- a/source/styles/modules/breadcrumb.less
+++ b/source/styles/modules/breadcrumb.less
@@ -11,7 +11,8 @@
         .text-cardinal;
 
         &::before {
-          content: '\003e';
+          content: '\f105';
+          .font-awesome;
         }
       }
 
