Add featured products sidebar module

--- a/source/styles/pages/home.less
+++ b/source/styles/pages/home.less
@@ -401,7 +401,7 @@
       }
     }
   }
-  
+
   #section_3 {
     padding-bottom: 35px;
 
@@ -444,6 +444,19 @@
           }
         }
       }
+    }
+  }
+
+  #section_4 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    &__sidebar {
+      .make-md-column(3);
+    }
+
+    &__content {
+      .make-md-column(9);
     }
   }
 }
