--- a/source/styles/pages/signup.less
+++ b/source/styles/pages/signup.less
@@ -96,7 +96,7 @@
 
           &__policy {
             font-style: italic;
-            line-height: 46px;
+            padding-top: 16px;
           }
         }
       }
