Apply styles to header in Layout base #2

--- a/source/styles/modules/header.less
+++ b/source/styles/modules/header.less
@@ -3,7 +3,8 @@
  ******************************
  */
 
-.layout-base-1 {
+.layout-base-1,
+.layout-base-2 {
   #header {
     &__header_top {
       .background-wild-sand;
