WEB-9 Implement section San pham noi bat

--- a/source/styles/modules/featured-products.less
+++ b/source/styles/modules/featured-products.less
@@ -1,3 +1,8 @@
+/**
+ * Modules - Featured Products
+ *****************************
+ */
+
 .featured-products {
   width: 100%;
 
@@ -12,6 +17,7 @@
     .title {
       font-size: 14px;
       line-height: 16px;
+      text-transform: uppercase;
       font-family: 'Roboto Medium', Roboto Medium, Arial, Helvetica Neue, Helvetica, sans-serif;
     }
 
