--- a/source/styles/style.less
+++ b/source/styles/style.less
@@ -29,6 +29,7 @@
 @import 'modules/header.less';
 @import 'modules/footer.less';
 @import 'modules/featured-products.less';
+@import 'modules/product-list.less';
 @import 'modules/breadcrumb.less';
 
 //Pages
