Restore table when hover and display cursor when hover San pham noi bat

--- a/source/styles/modules/featured-products.less
+++ b/source/styles/modules/featured-products.less
@@ -63,6 +63,12 @@
         font-size: 14px;
         line-height: 16px;
         font-family: 'Roboto Regular', Arial, Helvetica Neue, Helvetica, sans-serif;
+
+        &:hover {
+          .text-cardinal;
+
+          cursor: pointer;
+        }
       }
 
       .name {
