--- a/source/styles/modules/product-list.less
+++ b/source/styles/modules/product-list.less
@@ -6,6 +6,8 @@
 .product-list {
   .make-row();
 
+  padding-bottom: 30px;
+
   .wrapper {
     position: relative;
     padding: 22px 24px 20px 24px;
@@ -15,6 +17,48 @@
 
   .item {
     .make-md-column(4);
+
+    .pricing-table {
+      .background-scorpion;
+      .text-white;
+
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      left: 12px;
+      transition: all 0.2s ease-out;
+      display: block;
+      opacity: 0.9;
+      border-radius: 4px;
+      overflow: hidden;
+      height: 0;
+      z-index: 1;
+
+      table {
+        width: 100%;
+
+        tr {
+          th {
+            font-family: 'Roboto Medium', Arial, "Helvetica Neue", Helvetica, sans-serif;
+            font-size: 14px;
+            font-weight: 500;
+            padding: 15px;
+            box-shadow: inset 0 -1px 0 rgba(221, 221, 221, 0.5), inset 0 1px 0 rgba(221, 221, 221, 0.5);
+
+            &:first-child {
+            }
+          }
+
+          td {
+            font-family: 'Roboto Regular', Arial, "Helvetica Neue", Helvetica, sans-serif;
+            padding: 10px 15px;
+            box-shadow: inset 0 -1px 0 rgba(221, 221, 221, 0.5), inset 0 1px 0 rgba(221, 221, 221, 0.5);
+          }
+
+          text-decoration: none;
+        }
+      }
+    }
 
     .title {
       .text-blackcurrant;
