--- a/source/styles/pages/home.less
+++ b/source/styles/pages/home.less
@@ -197,12 +197,43 @@
     padding-top: 30px;
     padding-bottom: 35px;
 
-    .title {
+    .header {
+      display: flex;
+      height: 35px;
+      align-items: center;
+      justify-content: space-between;
       margin-bottom: 38px;
-      font-family: 'Roboto Regular', Arial, "Helvetica Neue", Helvetica, sans-serif;
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 28px;
+
+      .title {
+        font-size: 24px;
+        line-height: 28px;
+        text-transform: uppercase;
+        font-family: 'Roboto Medium', Roboto Medium, Arial, Helvetica Neue, Helvetica, sans-serif;
+      }
+
+      .action {
+        button {
+          .background-white;
+          .text-dusty-gray;
+
+          display: inline-block;
+          text-align: center;
+          width: 32px;
+          height: 32px;
+          font-size: 18px;
+          border-radius: 2px;
+          border: 1px solid @color-alto;
+          outline: none;
+          transition: all 0.3s ease-out;
+
+          &:hover {
+            .background-scorpion;
+            .text-white;
+
+            border-color: @color-scorpion;
+          }
+        }
+      }
     }
 
     .list {
@@ -490,6 +521,110 @@
         img {
           width: 100%;
           height: auto;
+        }
+      }
+    }
+  }
+
+  #section_5,
+  #section_6,
+  #section_7 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    &__sidebar {
+      .make-md-column(3);
+
+      position: relative;
+
+      .image {
+        background: #2d5489;
+        opacity: 0.95;
+        width: 100%;
+        height: 450px;
+        max-height: 450px;
+        overflow-y: hidden;
+      }
+
+      .title {
+        .font-roboto;
+        .text-white;
+
+        position: absolute;
+        top: 35px;
+        left: 42px;
+        right: 42px;
+        text-align: left;
+        font-size: 24px;
+        line-height: 28px;
+        text-transform: capitalize;
+        z-index: 1;
+      }
+
+      .view-more {
+        .font-roboto;
+        .text-white;
+
+        position: absolute;
+        bottom: 24px;
+        left: 42px;
+        right: 42px;
+        text-decoration: none;
+        padding: 12px 54px;
+        height: 42px;
+        text-align: center;
+        font-size: 17px;
+        line-height: 16px;
+        border: 1.2px solid @color-white;
+        text-transform: capitalize;
+        border-radius: 2px;
+
+        &:hover {
+          box-shadow: 0 0 0 1px @color-white;
+          background: rgba(255, 255, 255, 0.07);
+        }
+      }
+    }
+
+    &__content {
+      .make-md-column(9);
+
+      .header {
+        display: flex;
+        height: 35px;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 30px;
+
+        .title {
+          font-size: 24px;
+          line-height: 28px;
+          text-transform: uppercase;
+          font-family: 'Roboto Medium', Roboto Medium, Arial, Helvetica Neue, Helvetica, sans-serif;
+        }
+
+        .action {
+          button {
+            .background-white;
+            .text-dusty-gray;
+
+            display: inline-block;
+            text-align: center;
+            width: 32px;
+            height: 32px;
+            font-size: 18px;
+            border-radius: 2px;
+            border: 1px solid @color-alto;
+            transition: all 0.3s ease-out;
+            outline: none;
+
+            &:hover {
+              .background-scorpion;
+              .text-white;
+
+              border-color: @color-scorpion;
+            }
+          }
         }
       }
     }
