WEB-17 Implement filter panel

--- a/source/styles/settings/colors.less
+++ b/source/styles/settings/colors.less
@@ -40,6 +40,10 @@
   color: #372d40 !important;
 }
 
+.text-black {
+  color: #000 !important;
+}
+
 .background-claret {
   background-color: #761324;
 }
