--- a/source/styles/style.less
+++ b/source/styles/style.less
@@ -19,6 +19,7 @@
 @import 'overrides/bootstrap.less';
 @import 'overrides/font-awesome.less';
 @import 'overrides/slick-carousel.less';
+@import 'overrides/ion.rangeSlider.less';
 
 //Component
 
@@ -34,3 +35,4 @@
 @import 'pages/home.less';
 @import 'pages/login.less';
 @import 'pages/forgot-password-1.less';
+@import 'pages/product-list.less';
