WEB-11 Implement partner slider

--- a/source/styles/style.less
+++ b/source/styles/style.less
@@ -31,6 +31,7 @@
 @import 'modules/featured-products.less';
 @import 'modules/product-list.less';
 @import 'modules/breadcrumb.less';
+@import 'modules/partner-slider.less';
 
 //Pages
 @import 'pages/home.less';
