WEB-17 Update style

--- a/source/styles/pages/product-list.less
+++ b/source/styles/pages/product-list.less
@@ -156,12 +156,11 @@
           .make-md-column(9);
 
           .option-box {
-            height: 64px;
+            line-height: 64px;
             border: 1px solid @color-gallery;
             border-radius: 2px;
             padding: 0 16px;
             display: flex;
-            align-items: center;
             justify-content: space-between;
 
             .filter-result {
