WEB-19 Implement pagination

--- a/source/styles/pages/product-list.less
+++ b/source/styles/pages/product-list.less
@@ -155,13 +155,14 @@
         &__content {
           .make-md-column(9);
 
-          .option-box {
+          .section-1 {
             line-height: 64px;
             border: 1px solid @color-gallery;
             border-radius: 2px;
             padding: 0 16px;
             display: flex;
             justify-content: space-between;
+            margin-bottom: 30px;
 
             .filter-result {
               .text-black;
