--- a/source/styles/style.less
+++ b/source/styles/style.less
@@ -32,6 +32,7 @@
 @import 'modules/featured-products.less';
 @import 'modules/product-list.less';
 @import 'modules/breadcrumb.less';
+@import 'modules/pagination.less';
 
 //Pages
 @import 'pages/home.less';
