--- a/source/styles/pages/product-list.less
+++ b/source/styles/pages/product-list.less
@@ -6,7 +6,7 @@
 .page-product-list {
   #main {
     &__banner {
-      padding: 30px 0;
+      padding-top: 30px;
 
       > .banner-image {
         width: 100%;
