WEB-17 Move product list to module

--- a/source/styles/overrides/ion.rangeSlider.less
+++ b/source/styles/overrides/ion.rangeSlider.less
@@ -5,6 +5,12 @@
 
   .irs-handle {
     border: 1px solid @color-cardinal;
+    box-shadow: none;
+
+    &.state_hover,
+    &:hover {
+      .background-white;
+    }
   }
 
   .irs-bar {
@@ -20,5 +26,9 @@
   .irs-to,
   .irs-single {
     display: none;
+  }
+
+  .irs-line {
+    .background-mercury;
   }
 }
