--- a/source/styles/style.less
+++ b/source/styles/style.less
@@ -33,6 +33,7 @@
 @import 'modules/product-list.less';
 @import 'modules/breadcrumb.less';
 @import 'modules/pagination.less';
+@import 'modules/filter-panel.less';
 
 //Pages
 @import 'pages/home.less';
